<resources>
    <string name="app_name">My Application</string>
    <string name="greeting">Good Morning</string>
    <string name="login">Login ID</string>
    <string name="login_button">Log In</string>
    <string name="remember">RememberLogin ID</string>
    <string name="enable_face">Enable Face ID</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="open_account">Open an Account</string>
</resources>
